[package]
name = "tmpl"
version = "0.1.1"
authors = ["Aiden McClelland <aiden@start9.dev>"]
edition = "2018"
description = "A command line utility for interpolating templates."
license = "MIT"
repository = "https://github.com/Start9Labs/templating-engine-rs"
documentation = "https://docs.rs/tmpl"
readme = "README.md"

[lib]
name = "tmpl"

[dependencies]
serde_yaml = "0.8.11"
